--- a/mavenJsf/pom.xml
+++ b/mavenJsf/pom.xml
@@ -21,6 +21,11 @@
             <version>2.2.2</version>
         </dependency>
         <dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc</artifactId>
+			<version>11.2.0.4.0</version>
+		</dependency>
+        <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>5.2</version>
